--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-   <title>Test Page</title>
-  </head>
-
-  <body>
-    <div>이 페이지는 Github Page Sample 페이지 입니다</div>
-  </body>
-</html>
+ <head>
+    <title> 사각사각 </title>
+    <link href="index.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href= "image/book-1294379_1280.png">
+</head>
+<header>
+    <center><p class="title"><img id="사각사각" src="image/%ED%83%80%EC%9D%B4%ED%8B%80.png" width="200px" alt="sagak"></p></center>   
+</header>
+<nav>
+     <ul>
+     <li><a href="index.html"> HOME </a></li>
+     <li><a href="novel.html"> NOVEL </a></li>
+     <li><a href="poem.html"> POEM </a></li>
+     <li><a href="recommend.html"> RECOMMEND </a></li>
+     <li><a href="introduce.html"> INTRODUCE </a></li>
+     </ul>
+    </nav>
+<body>
+ <center>
+     <a class="MAIN"><img src="image/%EB%AA%A8%EB%88%88%EC%A2%85%EC%9D%B4.png" width="800px"></a><br><br><br><br>
+         <center><a class="main">HARANG literature Portfolio</a></center><br><br><br><br>
+     <style>
+         .main{
+             height: 70px;
+             border-bottom: 1px solid white;
+             border-top: 1px solid white;
+         }
+     </style>
+     <section>
+         <a class="SUB"><img src="image/%EC%96%B4%EC%A9%8C%EA%B3%A01.png" width="250px"></a>
+         <a class="SUB"><img id="ㅗ" usemap="#site" src="image/%EB%B2%84%ED%8A%BC_%EC%86%8C%EC%84%A4.png" width="250px"></a><map name="site"><area shape="rect" coords="0,0,250,250" href="novel.html" title="소설 페이지 바로가기"><br><br></map>
+         <a class="SUB"><img id="ㅗ" usemap="#site2" src="image/%EB%B2%84%ED%8A%BC_%EC%8B%9C.png" width="250px"></a><map name="site2"><area shape="rect" coords="0,0,250,250" href="poem.html" title="시 페이지 바로가기"></map>
+         <a class="SUB"><img src="image/%EC%96%B4%EC%A9%8C%EA%B3%A01.png" width="250px"></a>
+     </section><br><br><br>
+     <center><a class="main">"A good book is a great friend."</a></center><br><br>
+     <style>
+         .main{
+             height: 70px;
+             border-bottom: 1px solid white;
+             border-top: 1px solid white;
+         }
+     </style>
+ </center>
+</body>
+<footer>
+    <p class="bottom">HARANG Portfolio 2020 Wed Design</p>
+</footer>
